Modernize lighty-gnmi-test code
Modernize our code in lighty-gnmi-test with:
- use orElseThrow instead of get
- use java.nio.Path instead of Paths

Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>